--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "linebyline": "^1.3.0",
-    "ng6-toastr-notifications": "^1.0.4",
+    "ngx-toastr": "^10.1.0",
     "readline": "^1.3.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.5.2",
