--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.3",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "linebyline": "^1.3.0",
     "loadash": "^1.0.0",
