--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "demon": "nodemon src/public/app.ts",
     "start": "tsc && node dist/src/public/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine-ts --config=jasmine.json"
   },
   "author": "clepere",
   "license": "0BSD",
@@ -16,7 +16,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/jasmine": "^3.6.2",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
+    "jasmine": "^3.6.3",
+    "jasmine-spec-reporter": "^6.0.0",
+    "jasmine-ts": "^0.3.0",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
