--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "demon": "nodemon src/public/app.ts",
-    "start": "tsc && node dist/src/public/app.ts",
-    "test": "jasmine-ts --config=jasmine.json"
+    "start": "tsc && node dist/public/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "clepere",
   "license": "0BSD",
